2010-08-17  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/massive_operations.php: Fixed the default tab 
	of the massive operations section

2010-08-17  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/massive_copy_modules.php
	godmode/agentes/massive_add_alerts.php
	godmode/agentes/massive_delete_agents.php
	godmode/agentes/massive_config.php
	godmode/agentes/massive_delete_action_alerts.php
	godmode/agentes/massive_delete_alerts.php
	godmode/agentes/massive_edit_modules.php
	godmode/agentes/massive_operations.php
	godmode/agentes/massive_delete_modules.php
	godmode/agentes/massive_add_action_alerts.php: Restructured the
	tabs of masive operations. Now there are only four tabs: module, 
	agents, alerts and the enterprise policy masive operations. All
	the operations are now classified under this hierarchy

2010-08-17  Sergio Martin <sergio.martin@artica.es>

	* extensions/agents_modules.php: Added an agent group filter into
	the agents/modules matrix and increased the size of the header to
	read more letters from the module names

2010-08-13  Miguel de Dios  <miguel.dedios@artica.es>
	* include/functions.php: erased deprecate function "entrada_limpia" for to
	use only the english named "safe_input".
	 
	* godmode/setup/links.php: replaced the deprecate function "entrada_limpia"
	for the english named "safe_input".

2010-08-13  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php: Added the alerts fired status
	to the visual maps drawing an orange edge around the static graph icon

2010-08-13  Miguel de Dios  <miguel.dedios@artica.es>
	* include/functions_reporting.php: fixed the loop of alerts when Pandora
	haven't alerts.
	Fixes: #3044246

2010-08-13  Sergio Martin <sergio.martin@artica.es>

	* operation/snmpconsole/snmp_view.php: Fixed the pagination
	block filter in the SNMP console

2010-08-13  Sergio Martin <sergio.martin@artica.es>

	* extensions/agents_modules.php: Aligned vertically the modules